2006-03-05  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added "pl" to ALL_LINGUAS

2006-03-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/FrameVisualDisk.h,
	  src/FrameVisualDisk.cc: improved the algorithm to deal with lost
	  pixels after seeing some problems with rather insane
	  partitiontables.
	* src/Dialog_Partition_Info.cc: minor cleanup
	* src/GParted_Core.cc: show error in partitioninfo if statvfs fails
	* src/TreeView_Detail.cc: added FIXME
	
2006-03-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Base_Partition.cc,
	  src/FrameVisualDisk.cc: added FIXME
	* src/Win_GParted.cc: force processing of all pending Gtk::Main events
	  after Refresh_Visual. This fixes an issue with incorrect displayed
	  Visual Partition Display.
	
2006-03-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Frame_Resizer_Base.h,
	  include/Frame_Resizer_Extended.h,
	  src/Dialog_Base_Partition.cc,
	  src/Dialog_Partition_Copy.cc,
	  src/Dialog_Partition_New.cc,
	  src/Dialog_Partition_Resize_Move.cc,
	  src/Frame_Resizer_Base.cc,
	  src/Frame_Resizer_Extended.cc: did lots of work on the resizer, it's
	  behaviour should be more natural and satisfying now. (see also
	  #331591)
	* src/Win_GParted.cc: extended partition was resizable even when it's
	  busy. fixed.
	* src/ntfs.cc: made scan output more readable.
	* src/FrameVisualDisk.cc: added FIXME

2006-02-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/GParted_Core.h,
	  src/GParted_Core.cc: catch libparted exceptions and display them in
	  the operationdetails if an operation has failed.
	* src/Dialog_Progress.cc: small cosmetic change to the errordialog.

2006-02-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* improved errorhandling in Set_Used_Sectors() in the filesystemclasses
	
2006-02-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* in some places i still used MiB's instead of sectors to store sizes.
	  this has been fixed everywhere. Only the spinbuttons still use