@@ -1,3 +1,10 @@
+2006-03-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Partition_Info.cc,
+	  src/GParted_Core.cc: fixed crasher with busy partition without
+	  mountpoint (#332983)
+	* src/Win_GParted.cc: added FIXME
+	
 2006-03-05  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* configure.in: Added "pl" to ALL_LINGUAS
